--- a/src/app/alert-dialog/dialog-overview-dialog.html
+++ b/src/app/alert-dialog/dialog-overview-dialog.html
@@ -3,5 +3,5 @@
   <p>You are seccessfully passed the registration</p>
 </div>
 <div style="text-align: right;">
-  <button mat-button (click)="onNoClick()" style="color: coral; size: 23px">Ok</button>
+  <button mat-button (click)="onOkClick()" style="color: coral; size: 23px">Ok</button>
 </div>
