--- a/src/app/app-main-nav/app-main-nav.component.sass
+++ b/src/app/app-main-nav/app-main-nav.component.sass
@@ -5,24 +5,30 @@ hr
 a.nav-item.nav-link
   padding-right: 0
   color: black
-
+/* styling links in main menu in the top*/
 a.nav-item.nav-link:hover
   color: coral !important
 ul
   li
     a
       font-size: 1.5vw
+/* styling super user data (email, name)*/
 .super-user-data 
    p
       line-height: 20px
       margin-top: 20px
       font-size: 1.4vw
-
+      a
+          font-size: 1.4vw
+/*for super user email and name*/
 .super-user-data
   display: flex
   justify-content: center
   align-items: center
   text-align: right
+/*line-height: 5px*/
+/*font-size: 10px*/
+
 
 .sidenav-container 
   height: 100%
@@ -61,29 +67,17 @@ ul
   justify-content: center
   align-items: center
 
-
-
-/* .text-left
-  margin-top: 160px
- */
 .user-name
   margin-bottom: 0px
 
-mat-nav-list
+.mat-nav-list
   margin-top: 140px
 
-/*.spacer*/
-  /*flex: 1 1 auto*/
-/**/
 .logo-img
   height: 25px
-
+/* align main menu links at the top*/
 .main-menu-links
   margin-top: 7px
   text-transform: none
-
-.super-user-data
-  line-height: 5px
-  font-size: 10px
 
 
