--- a/src/app/requirements/requirements.component.css
+++ b/src/app/requirements/requirements.component.css
@@ -1,23 +1,34 @@
+/* styles for main image at front of the page */
+.container-wrap{
+  background-image: url('../../img/bg-2.jpg');
+  background-size: cover;
+}
 .man-laptop-img{
-  /*background-image: url("../../img/man-laptop-v2.svg");*/
   height: 407px;
   width: 343px;
   margin: auto;
-  display: block;
-  /*background-size: cover;*/
-
 }
-.container{
+.img-text-items-wrap{
+  flex-wrap: wrap;
+}
+/* .container{
   background-image: url("../../img/bg-2.jpg");
   background-size: cover;
-}
+} */
 h2, p{
   color: white;
   margin: auto;
 }
 
-@media(max-width: 567px){
-  .man-laptop-img{
-    text-align: center;
+@media(min-width: 768px){
+  .img-container{
+    padding-left: 0;
+    margin-top: 35px;
+  }
+}
+@media(min-width: 991px){
+  .img-container{
+    padding: auto;
+    margin: auto;
   }
 }
