--- a/src/app/requirements/requirements.component.html
+++ b/src/app/requirements/requirements.component.html
@@ -1,26 +1,26 @@
-<div class="container">
-  
+<div class="container-wrap">
+  <div class="container">
+
+<!-- <img src="../../img/bg-2.jpg" style="z-index: -1; width: 100%; height: 100%"> -->
+
   <div class="row">
     <h2 class="text-center mt-5 mb-5">
       General Requirements for the test task
     </h2>
   </div>
 
-  <div class="row">
-
+  <div class="d-flex flex-row-reverse row-hl img-text-items-wrap">
     <div
-      class="col-sm-12
-                col-md-6
-                col-lg-6
-                col-xl-6
-                text-center
-                "
+      class=" img-container
+              item-hl col-sm-12 
+              col-md-6 col-lg-6 
+              col-xl-6 text-center"
     >
       <img src="../../img/man-laptop-v2.svg" class="man-laptop-img mb-5" />
     </div>
 
-    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-      <p class="text-sm-center text-lg-left text-xl-left mb-5">
+    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item-hl">
+      <p class="text-sm-center text-md-left text-lg-left text-xl-left mb-5">
         Users want to fined answers to their questions quickly and data shows
         that people really care about how quickly thier pages load. The search
         team announced speed would be a ranking signal for desktop search in
@@ -41,6 +41,6 @@
         by Chrome users under real-world conditions.
       </p>
     </div>
-
+  </div>
   </div>
 </div>
