--- a/src/app/assignment/assignment.component.css
+++ b/src/app/assignment/assignment.component.css
@@ -1,4 +1,4 @@
-#bgimg{
+#container-wrap{
   background-image: url('../../img/bg-1.jpg');
   background-size: cover;
 }
@@ -21,29 +21,20 @@ h1{
 }
 
 @media(max-width: 567px){
-  .block-text{
-    margin-left: auto;
-    margin-right: auto;
-
-  }
+  /* text and header alignment wich is at from of the page  */
   .main-text-align{
     text-align: center;
     width: 80vw;
     margin-left: auto;
     margin-right: auto;
   }
-
+/* alignment of Sign Up button */
   .btn-align{
     margin: 0 auto;
   }
 
 }
 @media(min-width: 568px){
-  .block-text{
-    margin-left: 0px;
-    margin-right: auto;
-
-  }
   .main-text-align{
     text-align: left;
     width: 400px;
@@ -56,4 +47,24 @@ h1{
     margin: auto 0px;
   }
 
+}
+@media(min-width: 320px){
+  #container-wrap{
+    background-image: url('../../img/banner-bg-320.jpg');
+  }
+}
+@media(min-width: 768px){
+  #container-wrap{
+    background-image: url('../../img/banner-bg-768.jpg');
+  }
+}
+@media(min-width: 1205px){
+  #container-wrap{
+    background-image: url('../../img/banner-bg-1204.jpg');
+  }
+}
+@media(min-width: 2560px){
+  #container-wrap{
+    background-image: url('../../img/banner-bg-2560.jpg');
+  }
 }
