added links to setctions

--- a/src/app/app-main-nav/app-main-nav.component.html
+++ b/src/app/app-main-nav/app-main-nav.component.html
@@ -29,11 +29,11 @@
     </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">About Me</a>
-      <a mat-list-item href="#">Relationships</a>
-      <a mat-list-item href="#">Requirements</a>
-      <a mat-list-item href="#">Users</a>
-      <a mat-list-item href="#">Sign Up</a>
-      <a mat-list-item href="#">Sign Out</a>
+      <a mat-list-item href="#relationships">Relationships</a>
+      <a mat-list-item href="#requirements">Requirements</a>
+      <a mat-list-item href="#users">Users</a>
+      <a mat-list-item href="#signin-up">Sign Up</a>
+      <a mat-list-item href="#signin-up">Sign Out</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -64,19 +64,19 @@
               <a href="#" class="nav-item nav-link">About Me</a>
             </li>
             <li>
-              <a href="#" class="nav-item nav-link">Relationships</a>
+              <a href="#relationships" class="nav-item nav-link">Relationships</a>
             </li>
             <li>
-              <a href="#" class="nav-item nav-link">Requirements</a>
+              <a href="#requirements" class="nav-item nav-link">Requirements</a>
             </li>
             <li>
-              <a href="#" class="nav-item nav-link">Users</a>
+              <a href="#users" class="nav-item nav-link">Users</a>
             </li>
             <li>
-              <a href="#" class="nav-item nav-link">Sign Up</a>
+              <a href="#signin-up" class="nav-item nav-link">Sign Up</a>
             </li>
             <li>
-              <a href="#" class="nav-item nav-link">Sign Out</a>
+              <a href="#signin-up" class="nav-item nav-link">Sign Out</a>
             </li>
           </ul>
           <!--</div>-->
