--- a/src/app/aquainted/aquainted.component.css
+++ b/src/app/aquainted/aquainted.component.css
@@ -10,23 +10,26 @@
 #html-img{
   height: 114px;
   width: 100px;
-  margin: auto;
-  display: block;
+  /* margin: auto; */
+  /* display: block; */
 }
 #css-img{
   height: 114px;
   width: 100px;
-  margin: auto;
-  display: block;
+  /* margin: auto; */
+  /* display: block; */
 }
 #js-img{
   height: 114px;
   width: 100px;
-  margin: auto;
-  display: block;
+  /* margin: auto; */
+  /* display: block; */
 }
 
 @media(max-width: 767px){
+  .img-align{
+    text-align: center;
+  }
   /* alignment text about technologies (HTML CSS JS) */
   .text-tech-align{
     text-align: center;
@@ -39,10 +42,12 @@
   /* width of text about technologies html css js */
   .text-about-tech-width{
     width: 250px;
+
   }
 }
 
 @media(min-width: 768px){
+
   .main-text-align{
     text-align: left;
   }
@@ -55,15 +60,19 @@
   }
 }
 @media(min-width: 992px){
+  .img-align{
+    text-align: left;
+    margin-left: 20px;
+  }
   .text-about-tech-width{
     width: 250px;
   }
   .text-tech-align{
-    text-align: center;
+    text-align: left;
     margin: 0 auto;
   }
   .text-tech-align-together{
-    text-align: center;
+    text-align: left;
   }
 
 }
