--- a/src/app/aquainted/aquainted.component.html
+++ b/src/app/aquainted/aquainted.component.html
@@ -32,7 +32,7 @@
 
 
   <div class="row">
-    <h1 class="my-5 mx-auto text-center">
+    <h1 class="my-5 mx-auto text-center" id="relationships">
       About my relationships with web-development
     </h1>
   </div>
@@ -45,8 +45,8 @@
       <div class="row mb-5">
 
 
-            <div class="col-sm-12 offset-md-2 col-md col-lg col-xl mx-auto">
-              <img src="../../img/html.svg" id="html-img">
+            <div class="col-sm-12 offset-md-2 col-md col-lg col-xl img-align">
+              <img src="../../img/html.svg" class="html-img">
               <!--<div id="html-img"></div>-->
             </div>
 
@@ -68,8 +68,8 @@
     <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
       <div class="row mb-5">
 
-        <div class="text-center col-sm-12 offset-md-2 col-md col-lg col-xl mx-auto">
-          <img src="../../img/css.svg" id="css-img">
+        <div class="col-sm-12 offset-md-2 col-md col-lg col-xl img-align">
+          <img src="../../img/css.svg" class="css-img">
           <!--<div id="css-img"></div>-->
         </div>
 
@@ -91,8 +91,8 @@
     <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
       <div class="row mb-5">
 
-        <div class="col-sm-12 offset-md-2 col-md col-lg col-xl mx-auto">
-          <img src="../../img/javascript.svg" id="js-img">
+        <div class="col-sm-12 offset-md-2 col-md col-lg col-xl img-align">
+          <img src="../../img/javascript.svg" class="js-img">
           <!--<div id="js-img"></div>-->
         </div>
 
