--- a/src/app/requirements/requirements.component.html
+++ b/src/app/requirements/requirements.component.html
@@ -4,7 +4,7 @@
 <!-- <img src="../../img/bg-2.jpg" style="z-index: -1; width: 100%; height: 100%"> -->
 
   <div class="row">
-    <h2 class="text-center mt-5 mb-5">
+    <h2 class="text-center mt-5 mb-5" id="requirements">
       General Requirements for the test task
     </h2>
   </div>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item-hl">
-      <p class="text-sm-center text-md-left text-lg-left text-xl-left mb-5">
+      <p class="text-xs-center text-sm-center text-md-left text-lg-left text-xl-left mb-5">
         Users want to fined answers to their questions quickly and data shows
         that people really care about how quickly thier pages load. The search
         team announced speed would be a ranking signal for desktop search in
