added links to setctions1

--- a/src/app/aquainted/aquainted.component.html
+++ b/src/app/aquainted/aquainted.component.html
@@ -23,7 +23,7 @@
         improve user-experience on the web.
       </p>
       <p class="text-left mt-4" >
-        <a href="#"><strong style="color: coral">Sign Up</strong></a>
+        <a href="#signin-up"><strong style="color: coral">Sign Up</strong></a>
       </p>
     </div>
 
