add reset of form

--- a/src/app/assignment/assignment.component.html
+++ b/src/app/assignment/assignment.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row">
       <div class="btn-align">
-        <button class="btn mt-5 mb-5"><b><a href="#signin-up">Sign Up</a></b></button>
+        <button class="btn mt-5 mb-5"><b><a href="#signin-up" style="color: white">Sign Up</a></b></button>
       </div>
     </div>
   </div>
